# tpctools

./: .gitignore  .gitlab-ci.yml  01downloadpdfs.sh  01downloadpdfs4tai.sh  02downloadxmls.sh  03catch.non-conv.pdfs.4.cas1.sh  03fortai.sh  03pdf2cas.sh  04xml2cas.sh  05addimages2cas1.sh  06cas1tocas2.sh  06removecas1.sh  07cas1tocas2.sh  07getpmcoabib.sh  08removecas2.sh  09getcelegansbib.sh  09getpmcoabib.sh  09invertimages.sh  10getcelegansbib.sh  11index.sh  11invertimages.sh  12index.sh  CMakeLists.txt  README.md  TextpressoCentralGlobalDefinitions.h  TextpressoCentralGlobals.h  catch.non-conv.pdfs.4.cas1.sh  check_data.sh  combinepdfs.sh  multiprocess_utils.py  pdf2text.py  requirements.txt  run_tpc_pipeline_incremental.py  run_tpc_pipeline_incremental.sh  tai.sh  utils.py
CMYKInverter/: CMYKModifier.cpp  CMYKModifier.h  main.cpp
articles2cas/: Utils.cpp  Utils.h  articles2cas.cpp  convertallarticles2cas.sh
cas2index/: cas2index.cpp  create_index_multi_literatures.sh  create_single_index.sh  index_merger.cpp  saveidstodb.cpp  update_corpus_counter.cpp
classifiers/nn/scripts/: 01computeceleganswordmodel.sh  01computewordmodel.sh  02createcelegansdocvectors.sh  02createdocvectors.sh  02createdocvectors_old.sh  03classify.sh  03makelist.sh  04classify.sh  cleancas.pl  makehtmls.sh  nxmlfil.pl  pdfclean.pl
cmake/Modules/: FindAPR.cmake  FindLucene++.cmake  FindTextpresso.cmake  FindWt.cmake
commandlinesearches/: Postprocessing.h  main.cpp
curationtasks/: BatchSearch.cpp  BatchSearch.h  Postprocessing.cpp  main.cpp  unpublished_pipeline.sh
diffhtml/: cmdline.h  main.cpp
downloadpdf/: downloadpdf.cpp
getPdfBiblio/: download_pdfs_bib_files.py  okta_utils.py
getbib/: download_abstract.py  getallbibfiles.sh  getbib.cpp  getbib4nxml.cpp  getbib4nxmlUtils.cpp  getbib4nxmlUtils.h  getbibUtils.cpp  getbibUtils.h  make_bib.py
getbibinfoforpdffromserver/: download_pdfinfo.pl  extract_pdfbibinfo.pl  extractpmidabstract.pl
getpdfs/: getpdfs.py
getxmls/: getxmls.py
lucene/: CaseSensitiveAnalyzer.cpp  CaseSensitiveAnalyzer.h  LazySelector.h
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
pdf2text/: pdf2text.py
pgdumps/: dump.sh
ppm2jpg/: main.cpp  ppm2jpgCas.sh
printbibfromnxmlorcasfile/: extractpmidabstract.pl  main.cpp
useruploads/: run_userupload_pipeline_incremental.sh  uulcas1tocas2.bash
